# TripPlanner

./: .env.example  .gitignore  Project Proposal.md  README.md  demo.sh  docker-compose.yml  plan.md  pyproject.toml  start.sh
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: BudgetChart.tsx  ChatPanel.tsx  DayCard.tsx  Layout.tsx  MapView.tsx  PlanComparison.tsx  TripForm.tsx
frontend/src/pages/: HomePage.tsx  PlanPage.tsx  TripDetailPage.tsx  TripsListPage.tsx
frontend/src/utils/: maps.ts  routing.ts
sprints/: 00-task-tracker.md  S01-contract.md  S02-contract.md  S03-contract.md  S04-contract.md  S05-contract.md  S06-contract.md  S07-contract.md  S08-contract.md  S09-contract.md  S10-contract.md  S11-contract.md  S12-contract.md  S13-contract.md  S14-contract.md  S15-contract.md  S16-contract.md  S17-contract.md  S18-contract.md  S19-contract.md  S20-contract.md  S21-contract.md  S22-contract.md  S23-contract.md  S24-contract.md  S25-contract.md  S26-contract.md  S27-contract.md  S28-contract.md
src/tripplanner/: __init__.py  cli.py
src/tripplanner/api/: amap.py  opentripmap.py  weather.py
src/tripplanner/db/: crud.py  (+2 more)
tests/: conftest.py  test_amap.py  test_api.py  test_budget.py  test_cli.py  test_db.py  test_export.py  test_models.py  test_optimizer.py  test_plan_generator.py  test_plan_scorer.py  test_region.py  test_scheduler.py  test_scorer.py  test_state.py  test_weather.py  test_web_api.py
(+22 files in other folders)
